--- a/KCompiler/KCompiler/KCompiler.csproj
+++ b/KCompiler/KCompiler/KCompiler.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -7,6 +7,13 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Common\Common.csproj" />
+    <ProjectReference Include="..\PreCompiler\PreCompiler.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="src\test.k">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
