--- a/KCompiler/PreCompiler/Properties/launchSettings.json
+++ b/KCompiler/PreCompiler/Properties/launchSettings.json
@@ -1,8 +1,7 @@
 {
   "profiles": {
     "PreCompiler": {
-      "commandName": "Project",
-      "commandLineArgs": "--precomptemp --src=src/test.k"
+      "commandName": "Project"
     }
   }
 }
